hover color changed

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body class="bg-gradient-to-b from-gra from-[0px]  to-black to-[150px]    text-white font-roboto text-center">
     <header class=" sticky top-0 z-50 shadow-black ">
-        <nav class="shadow-black  drop-shadow-2xl xl:ml-20 ab:ml-96" >
+        <nav class="shadow-black  drop-shadow-2xl xl:ml-20 ab:ml-96">
          <div class="flex items-center justify-between px-6 ">
             <div class="">
                 <img class="h-5 my-2 md:h-9 sm:h-8 sm:ml-8 md:my-8 md:ml-4" src="https://cdn.prod.website-files.com/679e441b90452288c5c37443/679e4609e7b123fb0460c97c_Logo_trainai.avif" alt="Logo">
@@ -22,7 +22,7 @@
                 <p class="mx-3 xl:mx-10 lg:hover lg:hover:text-orange-400">Contact</p> 
             </div>
             <div class="lg:ml-[480px] xl:ml-[850px] 2xl:ml-[980px]">
-                <button class="hidden sm:block transition-all duration-500 ease-in-out hover:scale-105 hover:bg-orange-600  bg-custom-nav-button sm:py-2.5 sm:px-10 sm:ml-28 md:ml-56 lg:ml-20 xl:ml-0 rounded-xl">
+                <button class="hidden sm:block transition-all duration-500 ease-in-out hover:scale-105 hover:bg-green-600  bg-custom-nav-button sm:py-2.5 sm:px-10 sm:ml-28 md:ml-56 lg:ml-20 xl:ml-0 rounded-xl">
                   Get Started
                 </button>
             </div>
